# TrustOS

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  start.sh
api/: README.md  pyproject.toml
api/rego/hipaa/: risk_scoring.rego  technical_safeguards.rego
api/scripts/: load_hipaa_mappings.py  load_oscal_catalog.py  seed_hipaa_sample_data.py
api/src/proofstack/: __init__.py  main.py
api/src/proofstack/api/: deps.py
api/src/proofstack/api/v1/: __init__.py  admin.py  apps.py  audit_export.py  auditor.py  auth.py  controls.py  evidence.py  health.py  hipaa.py  integrations.py  me.py  posture.py  remediation.py  reports.py  runs.py  trust.py
api/src/proofstack/api/v1/workflows/: __init__.py  campaigns.py  people.py  policies.py  vendors.py
api/src/proofstack/core/: auth.py  backboard.py  config.py  rbac.py
api/src/proofstack/schemas/: app.py  audit_export.py  auditor.py  auth.py  campaign.py  common.py  control.py  evidence.py  hipaa.py  integration.py  people.py  policy_workflow.py  posture.py  remediation.py  report.py  run.py  trust.py  user.py  vendor.py
api/src/proofstack/services/: app.py  audit_export.py  jira.py  s3.py  slack.py  user.py
api/src/proofstack/workers/: __init__.py  activities.py  worker_main.py  workflows.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts
scripts/: seed_integrations.py  seed_users_assistant.py
(+43 files in other folders)
